[gd_scene load_steps=5 format=3 uid="uid://dt0ha4eeis5rj"]

[ext_resource type="Texture2D" uid="uid://brfyavrdpu7rn" path="res://assets/Aquaplant/background.png" id="1_3u35k"]
[ext_resource type="Script" uid="uid://v5mk5hvfaj2j" path="res://Main_menu/main_menu.gd" id="1_t5aul"]
[ext_resource type="Texture2D" uid="uid://fuasoy2eksq6" path="res://assets/logo/Aqualearn.png" id="2_t5aul"]

[sub_resource type="FontVariation" id="FontVariation_dt0ve"]

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t5aul")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.16565639, 0.16565642, 0.16565639, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = -457.0
offset_right = 15.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_3u35k")
expand_mode = 4

[node name="TextureRect2" type="TextureRect" parent="ColorRect"]
texture_filter = 4
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -357.25
offset_right = 357.25
offset_bottom = 442.0
grow_horizontal = 2
texture = ExtResource("2_t5aul")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -261.5
offset_top = -85.0
offset_right = 261.5
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="btn_play" type="Button" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0.8976866, 0, 0.84313726)
theme_override_font_sizes/font_size = 20
text = "Jugar"

[node name="btn_opciones" type="Button" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0.8976866, 0, 0.84313726)
theme_override_font_sizes/font_size = 20
text = "Opciones"

[node name="Btn_salir" type="Button" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0.8976866, 0, 0.84313726)
theme_override_colors/font_hover_pressed_color = Color(0.76702464, 3.465414e-06, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_dt0ve")
theme_override_font_sizes/font_size = 20
text = "Salir"

[connection signal="pressed" from="ColorRect/VBoxContainer/btn_play" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/btn_play" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/btn_opciones" to="." method="_on_btn_opciones_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Btn_salir" to="." method="_on_btn_salir_pressed"]
